# goap

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conf.json
include/: action.h  actions.h  agent.h  building.h  font_loader.h  item.h  item_stack.h  json_parser.h  m_assert.h  map.h  planner.h  state_machine.h  texture_loader.h  ui.h  utils.h  world.h
include/actions/: bundle_sticks.h  chop_tree.h  wood_cutting.h
src/: action.cpp  agent.cpp  font_loader.cpp  item_stack.cpp  json_parser.cpp  main.cpp  map.cpp  planner.cpp  state_machine.cpp  texture_loader.cpp  ui.cpp  utils.cpp  world.cpp
src/actions/: bundle_sticks.cpp  chop_tree.cpp  wood_cutting.cpp
