CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(goap)
SET(CMAKE_CXX_STANDARD 17)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")

ADD_EXECUTABLE(
    goap

    ${PROJECT_SOURCE_DIR}/src/main.cpp
    ${PROJECT_SOURCE_DIR}/src/action.cpp
    ${PROJECT_SOURCE_DIR}/src/world.cpp
    ${PROJECT_SOURCE_DIR}/src/building.cpp
    ${PROJECT_SOURCE_DIR}/src/planner.cpp
    ${PROJECT_SOURCE_DIR}/src/agent.cpp
)

IF (CMAKE_COMPILER_IS_GNUCC)
    TARGET_COMPILE_OPTIONS(goap PRIVATE "-Wall")
ENDIF ()
IF (MSVC)
    TARGET_COMPILE_OPTIONS(goap PRIVATE "/W4")
ENDIF ()
